# hippoclaudus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LEGACY_MODELS.md  README.md  V2_RELEASE_NOTES.md  V3_SPEC.md  V4_SPEC.md  WRITEUP.md  doctor.py  hippo.py  install.sh  pyproject.toml  pytest.ini
data/: slots.json
docs/plans/: 2026-02-17-installer-design.md  2026-02-17-installer-implementation.md
hippoclaudus/: __init__.py  archive_builder.py  comm_profiler.py  compactor.py  consolidator.py  db_bridge.py  installer.py  llm.py  llm_installer.py  personalizer.py  platform.py  predictor.py  scoring.py  slot_manager.py  symbolic_encoder.py  tagger.py
templates/: CLAUDE.md  Decision_Log.md  INDEX.md  Infrastructure_Notes.md  Memory_Bootstrap.md  Open_Questions_Blockers.md  Session_Summary_Log.md  Total_Update_Protocol.md  extract_conversations.py  keywords.yaml  scan_conversations.py
tests/: conftest.py  test_00_installation.py  test_01_db_bridge.py  test_02_scoring.py  test_03_llm.py  test_04_consolidator.py  test_05_tagger.py  test_06_compactor.py  test_07_predictor.py  test_08_comm_profiler.py  test_09_adversarial.py  test_10_platform.py  test_11_installer.py  test_12_personalizer.py  test_13_llm_installer.py  test_14_integration.py
