[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hippoclaudus"
version = "4.0.0"
description = "Persistent memory architecture with cognitive subroutines for Claude"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.5",
    "mlx-lm>=0.10",
]
llama-cpp = [
    "llama-cpp-python>=0.2",
]

[tool.setuptools.packages.find]
include = ["hippoclaudus*"]
